
Changed default behavior when exporting into the database's bibfile
representation.  Now, set meta=True to display the meta-information.
This also allow this info to be read when calling bm.loadfile().

Added bm_database argument to bm.load() function enabling loading
of pickle files that are not the Bibmanager's home database.
Same with get_version() function.

Updated and added docs and tests accordingly.

*****

Tweaked README.md, larger logo, 'fixed' docs URL.

*****

Updated Bibmanager's BibTex in docs (added ADS info).

*****

Fixed bug in cm.get() error message.  Take the available options from
the ROOT config rather than the one at HOME (which might have been
manually modified).

*****

Tweaked u.AlwaysPassValidator() class to use toolbar_text argument
as a default toolbar text.


*****  Mon Jan 20 00:18:44 CET 2020  *****

Modified pm.fetch() function to enable fetching PDFs that are not in
the Bibmanager database.
Added test.
Needs docs.


*****  Mon Jan 20 21:24:05 CET 2020  *****

Updated License line.

*****

Updated docs all around (ready for version 1.2 release).

*****

Added check that PDF files exist when they have a path. If they do
moeve them into the BM_PDF folder. If they don't, set bib.pdf to
None.
Added tests.

*****

Fixed error in latest added tests. Needed to initialize the database.

*****

Added CONTRIBUTING.md file.

*****

Bumped bibmanager version to 1.2.0rc1.
(pre-release).


*****  Thu Jan 23 21:21:04 CET 2020  *****

Refactored u.KeyWordCompleter() class for a cleaner code.
Stop sorting keywords (only keyword options).
Prevent error when tab-completing after keywords that are no
variables of a Bib() object.

*****

Implemented u.KeyPathCompleter() class to enable path completions.
First, suggest keywords, then suggest keyword-options, and finally
suggest files in system.

*****

Enabled bottom-toolbar info for PDFs in u.AlwaysPassValidator().

*****

Reworded bibm pdf prompt text (more descriptive).
