@@ -1764,3 +1764,7 @@ Enabled bottom-toolbar info for PDFs in u.AlwaysPassValidator().
 
 Reworded bibm pdf prompt text (more descriptive).
 
+*****
+
+Added history to PDF-related prompts.
+
